maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:11: error: ';' expected but 'else' found.
      }else{
       ^